--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="header">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
+
 <body>
 
 </body>
