--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="partials/navbar :: navbar">
     <meta charset="UTF-8">
-    <title>Edit Post</title>
+    <title>create Post</title>
 </head>
 <body>
 <h1>Create Post</h1>
-<form th:action="@{|/posts/create|}" th:method="POST">
-    <label for="title">Title</label>
-    <input id="title" type="text" name="title" th:value="title" placeholder="Enter title">
-    <label for="body">Body</label>
-    <textarea id="body" name="body" th:text="body" placeholder="Enter body"></textarea>
-    <button>Create Post</button>
-</form>
+<div class="container">
+
+    <h1>Create Post</h1>
+    <br>
+    <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input class="form-control" type="text" th:field="*{title}" placeholder="Enter Title">
+        </div>
+        <div class="form-group">
+            <label for="body">Post Content</label><br>
+            <textarea class="form-control" type="text" th:field="*{body}" rows="10" placeholder="Enter Text"></textarea>
+        </div>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Create Post</button>
+    </form>
+
+</div>
+<script :block th:replace="/partials/scripts :: scripts"></script>
 </body>
 </html>
