--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <title>Edit Post</title>
 </head>
+</head>
 <body>
-<h1>Edit Post</h1>
-<form th:action="@{|/posts/${post.id}/edit|}" th:method="POST" th:object="${post}">
-    <label for="title">Title</label>
-    <input type="text" th:field="${title}" placeholder="Enter title">
-    <label for="body">Body</label>
-    <textarea id="body" name="body" th:text="${post.body}" placeholder="Enter body"></textarea>
-    <button>Update Post</button>
-</form>
+<nav th:replace="partials/navbar.html :: navbar"></nav>
+<div class="container">
+    <h1>Edit Post</h1>
+    <form th:action="@{|/posts/${post.id}/edit|}" th:method="POST" th:object="${post}">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input class="form-control" type="text" th:field="*{title}">
+        </div>
+        <div class="form-group">
+            <label for="body">Post Content</label><br>
+            <textarea class="form-control" type="text" th:field="*{body}" rows="10"></textarea>
+        </div>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Edit Post</button>
+    </form>
+</div>
+<script :block th:replace="/partials/scripts :: scripts"></script>
 </body>
 </html>
