--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="partials/header.html :: header"></head>
 <body>
-    <h1>This is the <span th:text = "${name}"></span> page</h1>
+
+<nav th:replace="partials/navbar.html :: navbar"></nav>
+<h1>This is the home page</h1>
+
+<p>Hello</p>
 </body>
 </html>
