--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -21,6 +21,9 @@
             <li class="nav-item ml-auto">
                 <a class="nav-link" th:href="@{/login}">Login</a>
             </li>
+            <li class="nav-item ml-auto">
+                <a class="nav-link" th:href="@{/login}">Login</a>
+            </li>
             <li >
                 <form th:action="@{/logout}" th:method="post">
                     <button class="btn-link btn" style="margin-top: 8px">Logout</button>
