--- a/src/main/resources/templates/Users/login.html
+++ b/src/main/resources/templates/Users/login.html
@@ -12,13 +12,28 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
+<div class="container">
+    <h1>Log In</h1>
+    <div th:if="${param.error}">
+        Invalid Username and Password.
+    </div>
+    <div th:if="${param.logout}">
+        You have been logged out.
+    </div>
 
-<form th:action="@{/login}" method="post">
-    <label for="username">Username</label>
-    <input id="username" name="username" type="text" />
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    <input type="submit" value="Log In" />
-</form>
+    <form th:action="@{/login}" method="post">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input id="username" class="form-control" name="username" type="text"/>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input id="password" class="form-control" name="password" type="password"/>
+        </div>
+
+        <input type="submit" value="Log In"/>
+    </form>
+</div>
 </body>
 </html>
