--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" th:href="@{/login}">Login</a>
             </li>
             <li class="nav-item ml-auto">
-                <a class="nav-link" th:href="@{/login}">Login</a>
+                <a class="nav-link" th:href="@{/sign-up}">Sign-up</a>
             </li>
             <li >
                 <form th:action="@{/logout}" th:method="post">
