--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -10,16 +10,12 @@
 
     <h1>Create Post</h1>
     <br>
-    <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input class="form-control" type="text" th:field="*{title}" placeholder="Enter Title">
-        </div>
-        <div class="form-group">
-            <label for="body">Post Content</label><br>
-            <textarea class="form-control" type="text" th:field="*{body}" rows="10" placeholder="Enter Text"></textarea>
-        </div>
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Create Post</button>
+    <form th:action="@{|/posts/create|}" th:method="POST">
+        <label for="title">Title</label>
+        <input id="title" type="text" name="title" th:value="title" placeholder="Enter title">
+        <label for="body">Body</label>
+        <textarea id="body" name="body" th:text="body" placeholder="Enter body"></textarea>
+        <button>Save Post</button>
     </form>
 
 </div>
