--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -8,13 +8,13 @@
 <h1>Create an account</h1>
 <form th:action="@{/sign-up}" method="POST" th:object="${user}">
     <label for="username">Username</label>
-    <input  th:field="*{username}" />
+    <input id="username" th:field="*{username}" />
 
     <label for="email">Email</label>
-    <input th:field="*{email}" />
+    <input id="email" th:field="*{email}" />
 
     <label for="password">Password</label>
-    <input type="password" th:field="*{password}" />
+    <input id="password" type="password" th:field="*{password}" />
 
     <input value="Sign me up!" type="submit" />
 </form>
